--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
             </div>
         </div>
 
-        <a class="cta-vedi" href="pag2.html">Vedi tutti i miei progetti</a>
+        <a class="cta-vedi" href="https://lucagiacomello.github.io/Luca-Giacomello-Portfolio/pag2.html">Vedi tutti i miei progetti</a>
 
         <!--CONTATTAMI-->
         <div id="contatti" class="container_form">
