--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     <div class="containerMy">
 
         <!--LOGO-->
-        <a href="test.html">
+        <a href="index.html">
             <img src="images\logo.svg" alt="Logo del sito" class="logo"> 
         </a>    
 
